[package]
name = "bonkr"
version = "0.1.0"
description = "Bonkr Token Launchpad - Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bonkr"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
